
2007-09-15  Benno Schulenberg  <benno@vertaalt.nl>

	* tools/find-common-messages.sh: New tool, that finds
	messages that are worth including in a compendium.

	* tools/make-package-links.sh, tools/process-disclaimers.py:
	Add copyright lines.

2007-09-02  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-register, bin/tp-robot: "TP-robot" in Subject line is no
	longer required.  Show in notification mails to team lists either
	the URLs of updated HTML pages or the URL of the new tarball.

2007-08-25  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/po-expire: Don't fail when finding a POT file for a
	non-existent domain.

	* bin/generate-static-pages: Don't do anything when no option or
	argument is given.

2007-08-22  Benno Schulenberg  <benno@vertaalt.nl>

	* webgen/robot.all, webgen/translators.all: Explain usage of the
	robot in a single place.  Remove instructions on how to install
	gettext.  Add some suggestions on which commands to study.

2007-08-10  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/calc-postats: Do not fail when domain or team is unknown, but
	simply delete the associated stat.  Do not stop when some file does
	not exist, but stubbornly continue after printing a warning.

	* bin/make-obsolete.sh: A script to move files of an obsolete domain
	out of the way, and delete its stats and symlinks.

2007-08-09  Benno Schulenberg  <benno@vertaalt.nl>

	* registry/registry.sgml: Add the 'util-linux-ng' domain.

2007-08-08  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/extract-pot-files.sh: Add rule for 'libgphoto', use tabs
	consistently, move 'gettext' into alphabetical position.

	* registry/registry.sgml: Remove the obsolete domain 'mysecretdiary'.

2007-08-07  Benno Schulenberg  <benno@vertaalt.nl>

	* lib/localweb.py: Add a column to the domain index page that shows
	current version number, with a link to the POT file.

2007-08-06  Benno Schulenberg  <benno@vertaalt.nl>

	* bin/generate-static-pages: Autodetect the type of each argument: